fix: fix overlapping of button

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -130,6 +130,7 @@ a {
   background-size: cover;
   background-position: center;
   position: relative;
+  padding-bottom: 100px;
 }
 .WorkExperience .HeroGroup {
   max-width: 550px;
